feat: add image section and benefits list to homepage

--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
       padding: 1rem;
       margin-top: 2rem;
     }
+    .imagesection {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 1.5rem;
+    }
+    .imagesection img {
+      width: 250px;
+      height: auto;
+      border-radius: 8px;
+      height: 225px;
+    }
   </style>
 </head>
 <body>
@@ -64,6 +75,23 @@
       <p>📞 Phone: <a href="tel:07778881632">07778881632</a></p>
       <p>📍 Based in East London, serving local communities with pride.</p>
     </section>
+
+    <section>
+      <h2>Why Choose Us?</h2>
+      <ul>
+        <li>Affordable rates with no hidden fees</li>
+        <li>Flexible rental periods to suit your needs</li>
+        <li>Well-maintained vans for a smooth driving experience</li>
+        <li>Friendly and professional service</li>
+      </ul>
+    </section>
+
+    <section class="imagesection">
+      <img src="./img/1.jpg" alt="">
+      <img src="./img/2.jpg" alt="">
+      <img src="./img/3.jpg" alt="">
+    </section>
+
   </div>
 
   <footer>
