--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       display: flex;
       justify-content: space-between;
       margin-top: 1.5rem;
+      gap: 1rem;
     }
     .imagesection img {
       width: 250px;
@@ -46,6 +47,18 @@
       border-radius: 8px;
       height: 225px;
     }
+
+    @media screen and (max-width: 600px) {
+      .imagesection {
+        flex-direction: column;
+        align-items: center;
+      }
+      .imagesection img {
+        margin-bottom: 1rem;
+      }
+      
+    }
+
   </style>
 </head>
 <body>
